<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/placeholderColor"
    tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">


    <TextView
        android:id="@+id/mealType_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Meal Type"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/titleColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <HorizontalScrollView
        android:id="@+id/mealType_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mealType_txt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/mealType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@+id/main_course_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:text="@string/main_course"
                    android:id="@+id/main_course_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <!--style="@style/CustomChipStyle"-->
                <com.google.android.material.chip.Chip
                    android:text="@string/side_dish"
                    android:id="@+id/side_dish_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/desert"
                    android:id="@+id/desert_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/appetizer"
                    android:id="@+id/appetizer_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/salad"
                    android:id="@+id/salad_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/bread"
                    android:id="@+id/bread_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/breakfast"
                    android:id="@+id/breakfast_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/soup"
                    android:id="@+id/soup_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/beverage"
                    android:id="@+id/beverage_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/sauce"
                    android:id="@+id/sauce_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/marinade"
                    android:id="@+id/marinade_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/finger_food"
                    android:id="@+id/finger_food_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>


                <com.google.android.material.chip.Chip
                    android:text="@string/snack"
                    android:id="@+id/snack_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/drink"
                    android:id="@+id/drink_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomChipStyle"/>
            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/dietType_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/titleColor"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mealType_scrollView"/>
    <HorizontalScrollView
        android:id="@+id/dietType_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dietType_txt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/dietType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@+id/gluten_free_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:text="@string/gluten_free"
                    android:id="@+id/gluten_free_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <!--style="@style/CustomChipStyle"-->
                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:text="@string/keto_genic"
                    android:id="@+id/ketogenic_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:text="@string/vegetarian"
                    android:id="@+id/vegetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    android:text="@string/vegan"
                    android:id="@+id/vegan_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:text="@string/pescetarian"
                    android:id="@+id/pescetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:text="@string/paleo"
                    android:id="@+id/paleo_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:text="@string/primal"
                    android:id="@+id/primal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:text="@string/whole30"
                    android:id="@+id/whole30_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

<Button
    android:id="@+id/apply_btn"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="24dp"
    android:text="@string/apply"
    android:textColor="@color/white"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/dietType_scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>